# sakenowa-mcp

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
src/sakenowa_mcp/: __init__.py  data.py  demo.py  flavor.py  search.py  server.py
tests/: test_cache.py  test_smoke.py
