[project]
name = "sakenowa-mcp"
version = "0.1.0"
description = "The first Model Context Protocol server for Japanese sake — a flavor-space engine over the Sakenowa open dataset."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mame" }]
keywords = ["mcp", "sake", "nihonshu", "japanese-sake", "sakenowa", "flavor", "recommendation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/mame0001/sakenowa-mcp"
Repository = "https://github.com/mame0001/sakenowa-mcp"
"Data Source" = "https://sakenowa.com/"

[project.scripts]
sakenowa-mcp = "sakenowa_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sakenowa_mcp"]

[dependency-groups]
dev = ["pytest>=8"]
